--- a/Src/Agat1App/View/Views/_Layout.cshtml
+++ b/Src/Agat1App/View/Views/_Layout.cshtml
@@ -1,12 +1,14 @@
-﻿<!DOCTYPE html>
+﻿@using System.Web.Optimization
+<!DOCTYPE html>
 
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
+    @Styles.Render("~/Content/css")
 </head>
 <body>
-    <div>
+    <div class="container">
         @RenderBody()
     </div>
 </body>
