--- a/Src/Agat1App/View/Views/User/Edit.cshtml
+++ b/Src/Agat1App/View/Views/User/Edit.cshtml
@@ -32,6 +32,15 @@
                 @Html.ValidationMessageFor(model => model.LastName)
             </div>
         </div>
+        
+        @Html.HiddenFor(model => model.Address.Id)
+        <div class="form-group">
+            @Html.LabelFor(model => model.Address.City, new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Address.City)
+                @Html.ValidationMessageFor(model => model.Address.City)
+            </div>
+        </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
