--- a/Src/Agat1App/View/Views/User/Edit.cshtml
+++ b/Src/Agat1App/View/Views/User/Edit.cshtml
@@ -41,6 +41,27 @@
                 @Html.ValidationMessageFor(model => model.Address.City)
             </div>
         </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.Address.Street, new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Address.Street)
+                @Html.ValidationMessageFor(model => model.Address.Street)
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.Address.BuildingNumber, new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Address.BuildingNumber)
+                @Html.ValidationMessageFor(model => model.Address.BuildingNumber)
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.Address.ApartmentNumber, new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Address.ApartmentNumber)
+                @Html.ValidationMessageFor(model => model.Address.ApartmentNumber)
+            </div>
+        </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
