--- a/Src/Agat1App/View/Views/Request/Edit.cshtml
+++ b/Src/Agat1App/View/Views/Request/Edit.cshtml
@@ -1,20 +1,21 @@
 ﻿@model View.ViewModels.RequestCreateViewModel
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Edit";
     Layout = "~/Views/_Layout.cshtml";
 }
 
-<h2>Create</h2>
+<h2>Edit</h2>
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>CreateRequestViewModel</h4>
+        <h4>RequestUpdateViewModel</h4>
         <hr />
         @Html.ValidationSummary(true)
+        @Html.HiddenFor(model => model.Id)
         
         <div class="form-group">
             @Html.LabelFor(model => model.Author.Id, new { @class = "control-label col-md-2" })
@@ -30,10 +31,17 @@
                 @Html.ValidationMessageFor(model => model.Description)
             </div>
         </div>
+        
+        <div class="form-group">
+            @Html.LabelFor(model => model.DateCreated, new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DisplayFor(model => model.DateCreated)
+            </div>
+        </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </div>
     </div>
