--- a/Src/Agat1App/View/Views/Request/Index.cshtml
+++ b/Src/Agat1App/View/Views/Request/Index.cshtml
@@ -1,11 +1,11 @@
 ﻿@model IEnumerable<View.ViewModels.RequestViewModel>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Requests";
     Layout = "~/Views/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+<h2>Requests</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
