--- a/Src/Agat1App/View/Views/User/Index.cshtml
+++ b/Src/Agat1App/View/Views/User/Index.cshtml
@@ -1,11 +1,11 @@
 ﻿@model IEnumerable<View.ViewModels.UserViewModel>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Users";
     Layout = "~/Views/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+<h2>Users</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
