--- a/Src/Agat1App/View/Views/User/Edit.cshtml
+++ b/Src/Agat1App/View/Views/User/Edit.cshtml
@@ -1,18 +1,16 @@
 ﻿@model View.ViewModels.UserViewModel
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Edit user";
     Layout = "~/Views/_Layout.cshtml";
 }
-
-<h2>Edit</h2>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>UserViewModel</h4>
+        <h4>Edit user</h4>
         <hr />
         @Html.ValidationSummary(true)
         @Html.HiddenFor(model => model.Id)
